--- a/Taksathi/templates/Taksathi/products_page/products_page.html
+++ b/Taksathi/templates/Taksathi/products_page/products_page.html
@@ -2,14 +2,17 @@
 {% load static %}
 
 {% block content %}
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
  <main>
+
         <section id="image" class="m-auto">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 
                 <div class="carousel-inner">
 
                     {% for slider in sliders %}
-                      <div class="carousel-item {% if forloop.counter is 1 %}active{% endif %}">
+                      <div  class="carousel-item {% if forloop.counter is 1 %}active{% endif %}">
                         <a href="{{ slider.url }}" class="text-black text-decoration-none">
                             <img src="{{ slider.image.url }}" class="d-block w-100 rounded" alt="Slider">
                         </a>
@@ -36,13 +39,11 @@
 
                     {% for mainCategory1 in maincategories1 %}
                         <div class="col-lg-2 col-md-4 col-s-6 text-center">
-                            <div class="images">
-                                <a href="" class="text-black text-decoration-none">
+                            <div id="category" class="images">
                                     <img src="{{ mainCategory1.image.url }}" class="w-100 " alt="{{ mainCategory1.name }}">
                                     <h6 class="text-center pt-2" >
                                      {{ mainCategory1.name }}
                                     </h6>
-                                </a>
                             </div>
                         </div>
                     {% endfor %}
@@ -69,20 +70,18 @@
                             </div>
                         </div>
                     {% endfor %}
-
-
                 </div>
             </div>
         </section>
         <section id="content ">
             <h5 class="pt-4 pb-2 mx-2 " style="text-align: center">محصولات</h5>
-            <div class="conteiner mx-auto py-2 text-center">
-                <div class="row">
+            <div  class="conteiner mx-auto py-2 text-center">
+                <div id="main-product" class="row">
 
 
                     {% for product in products %}
                         <div class="col">
-                            <div class="card" style="width: 19rem;">
+                            <div id="k" class="card" style="width: 19rem;">
                                 <a href="{% url 'Taksathi:products_detail_page' product.id product.slug %}" class="text-black text-decoration-none" class="text-black text-decoration-none" >
                                     <img src="{{ product.image.url }}" class="card-img-top rounded" alt="{{ product.title }}">
                                     <div class="card-body">
@@ -92,19 +91,117 @@
                             </div>
                         </div>
                     {% endfor %}
-
+                    <div class="page-slider">
+                        <div id="go-back-card" class="page-icon"></div>
+                        <div class="page-number" dir="ltr">
+                            <span id="page1" class="page1 page"></span>
+                            <span id="page2" class="page2 page"></span>
+                            <span id="page3" class="page2 page"></span>
+                        </div>
+                        <div id="go-next-card" class="page-icon"></div>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
 
     <script>
-        $.ajax({
-            url:'',
+        $('#category').click(function(){
+            $.ajax({
+            url:'http://127.0.0.1:8000/api/products/products-filter-maincategory-list/?id=1',
             success:(res)=>{
-                console.log(res);
+                console.log(res , 'jjj');
+                let id= res.results[0].id
+                let slug= res.results[0].slug
+                console.log(id , 'qq');
+
+                // let id= res.results[0].id
+                $('#main-product').html('')
+                $('#main-product').append(`
+                    
+                        <div class="col">
+                            <div id="k" class="card" style="width: 19rem;">
+                                <a href="http://127.0.0.1:8000/taksathi/products/detail/?id=${id}&slug=${slug}" class="text-black text-decoration-none" class="text-black text-decoration-none" >
+                                    <img src="${res.results[0].image}" class="card-img-top rounded" alt="{{ product.title }}">
+                                    <div class="card-body">
+                                      <p class="card-text">${res.results[0].title} </p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                      
+                `)
+                if (response.previous == null && response.next == null) {
+                    $('#page1').html(``);
+                    $('#page2').html('1');
+                    $('#page1').html(``);
+                }
+                if (response.previous == null && response.next !== null) {
+                    nextUrl = response.next;
+                    $('#page1').html(``);
+                    $('#page2').html('1');
+                    $('#page3').html('2');
+                }
+                if (response.previous !== null && response.next !== null) {
+                    nextUrl = response.next;
+                    backUrl = response.previous;
+                    let nUrls = new URL(response.next)
+                    let nUrlNums = nUrls.searchParams.get("page");
+                    let currentpages = Number(nUrlNums) - 1;
+                    let prevPageNums = Number(nUrlNums) - 2;
+                    $('#page1').html(`${prevPageNums}`);
+                    $('#page2').html(`${currentpages}`);
+                    $('#page3').html(`${nUrlNums}`);
+                }
+                if (response.previous !== null && response.next == null) {
+                    if (response.previous == "http://127.0.0.1:8000/api/products/products-list/") {
+                        backUrl = response.previous;
+                        $('#page1').html(`1`);
+                        $('#page2').html('2');
+                        $('#page3').html('');
+                    }
+                    if (response.previous !== "http://127.0.0.1:8000/api/products/products-list/") {
+                        backUrl = response.previous;
+                        let nUrlss = new URL(response.previous)
+                        let nUrlNumss = nUrlss.searchParams.get("page");
+                        let currentpagess = Number(nUrlNumss) + 1;
+                        $('#page1').html(`${nUrlNumss}`);
+                        $('#page2').html(`${currentpagess}`);
+                        $('#page3').html(``);
+                    }
+                }
+
+                $('#page3').on('click', function() {
+        if ($('#page3').html() !== '') {
+            $('#articles').html('')
+            loadData(nextUrl)
+        }
+    })
+    $('#page1').on('click', function() {
+        if ($('#page1').html() !== '') {
+            $('#articles').html('')
+            loadData(backUrl)
+        }
+    })
+    $('#go-next-card').on('click', function() {
+        if ($('#page3').html() !== '') {
+            $('#articles').html('')
+            loadData(nextUrl)
+        }
+    })
+    $('#go-back-card').on('click', function() {
+        if ($('#page1').html() !== '') {
+            $('#articles').html('')
+            loadData(backUrl)
+        }
+    })
+            },
+            error:(err)=>{
+                console.log(err);
             }
-        })
+            })  
+                })
+      
     </script>
 
 {% endblock %}
