--- a/assets/taksathi_panel/asset/style/admin-panel.css
+++ b/assets/taksathi_panel/asset/style/admin-panel.css
@@ -433,10 +433,10 @@ p {
 }
 
 .add-icons {
-    width: 90%;
+    width: 37%;
     display: flex;
     justify-content: space-evenly;
-    margin: auto;
+    /* margin: auto; */
 }
 
 .add-icon {
@@ -1091,8 +1091,8 @@ p {
 }
 
 .chart-heder {
-    width: 80%;
-    display: flex;
+    /* width: 80%;
+    display: flex; */
     margin: auto;
 }
 
@@ -1667,4 +1667,75 @@ p {
     border: none;
     margin: auto;
     margin-top: 10px;
+}
+#snackbar {
+    width: 20%;
+    height: 60px;
+    /* color: #fff; */
+    text-align: center;
+    border-radius: 10px;
+    padding-top: 20px;
+    position: fixed;
+    z-index: 15;
+    bottom: 30px;
+    font-size: 17px;
+}
+
+.sucsses {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    /* background-color: #2ACB34;
+    border: 5px solid green    ; */
+}
+
+.error {
+    /* background-color: rgb(235, 26, 3); */
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+#add-img{
+    cursor: pointer;
+}
+/* *********************** chart filter *************************/
+
+.filter-part2 {
+    background-color: #EFEFEF;
+    position: relative;
+    border-radius: 30px;
+    width: 20%;
+    height: 60px;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+}
+.filter-part22 {
+    margin: auto !important;
+    width: 50% !important;
+}
+.filter-part2-dropdown {
+    display: none;
+    width: 200px;
+    height: auto;
+    position: absolute;
+    border-radius: 17px;
+    z-index: 1;
+    padding-top: 29px;
+    background-color: #efefef;
+    left: -66%;
+    top: 55px;
+}
+.filter-dropdown-txt {
+    display: block;
+    font-size: 22px;
+    text-align: center;
+    line-height: 46px;
+}
+    
+.filter-part2:hover .filter-part2-dropdown {
+    display: block;
+}
+.filter-dropdown-txt:hover {
+    background-color: #afafaf;
 }
