--- a/assets/Derakhti/asset/css/derakhti-panel.css
+++ b/assets/Derakhti/asset/css/derakhti-panel.css
@@ -83,6 +83,35 @@ body {
     display: flex;
     justify-content: right;
     width: 70%;
+    line-height: 35px;
+}
+
+#snackbar {
+    width: 20%;
+    height: 60px;
+    /* color: #fff; */
+    text-align: center;
+    border-radius: 20px;
+    padding-top: 20px;
+    position: fixed;
+    z-index: 15;
+    bottom: 30px;
+    font-size: 17px;
+}
+
+.sucsses {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    /* background-color: #2ACB34;
+    border: 5px solid green    ; */
+}
+
+.error {
+    /* background-color: rgb(235, 26, 3); */
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
 }
 
 .profile-line-two {
@@ -126,6 +155,11 @@ body {
     display: flex;
     justify-content: right;
     width: 68%;
+    line-height: 35px;
+}
+
+#myChartTwo {
+    margin: auto;
 }
 
 .advance-tree-chart {
@@ -136,12 +170,14 @@ body {
     display: flex;
     justify-content: right;
     width: 80%;
+    line-height: 35px;
 }
 
 .profile-line-two-three-all-text {
     display: flex;
     justify-content: right;
     width: 80%;
+    line-height: 35px;
 }
 
 .profile-line-three {
@@ -1187,6 +1223,11 @@ body {
     box-shadow: 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
     border-radius: 15px;
     margin: auto;
+    padding-bottom: 20px;
+}
+
+.save-point {
+    padding-top: 9%;
 }
 
 .client-icon {
@@ -1738,4 +1779,278 @@ body {
 
 .btn {
     background-color: orange !important;
+}
+
+
+/********************** register place ********************/
+
+.home-icon {
+    background-image: url(../icons/home.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 38px;
+    height: 38px;
+    display: block;
+    margin: auto;
+}
+
+.go-main-panel {
+    display: flex;
+    justify-content: right;
+    width: 200px;
+}
+
+.dashboard {
+    width: 70%;
+}
+
+.mid-register-place-box {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.level-one {
+    width: 25%;
+    height: auto;
+    display: block;
+}
+
+.level-two {
+    width: 25%;
+    display: none;
+}
+
+.level-three {
+    width: 25%;
+    display: none;
+}
+
+.level-four {
+    width: 23%;
+    display: none;
+}
+
+.reagent-code-title {
+    color: #cfcfcf;
+}
+
+.reagent-code-input {
+    width: 75%;
+    height: 50px;
+    border: none;
+    border-bottom: 1px solid #cfcfcf;
+    margin-bottom: 30px;
+}
+
+.level-one-details {
+    width: 90%;
+    display: block;
+    margin: auto;
+}
+
+.reagent-info-title {
+    color: #cfcfcf;
+}
+
+.text-register-info {
+    color: #cfcfcf;
+}
+
+.mobile-info {
+    display: flex;
+    justify-content: right;
+}
+
+.parent-gp {
+    width: 90%;
+    height: auto;
+    display: block;
+    border-radius: 20px;
+    box-shadow: 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    margin: auto;
+}
+
+.level-two {
+    text-align: center;
+    color: #cfcfcf;
+    display: none;
+}
+
+.parent-inp {
+    display: flex;
+    margin: auto;
+}
+
+.parent-inp input {
+    width: 90px;
+    height: 50px;
+    display: block;
+    border: 1px solid #cfcfcf;
+    border-radius: 20px;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 40px;
+}
+
+.top-parent {
+    width: 150px;
+    height: 50px;
+    display: block;
+    margin: auto;
+    border: 1px solid #cfcfcf;
+    border-radius: 20px;
+}
+
+.all-info-text {
+    color: #2c2c2c;
+}
+
+.question-static-icon {
+    background-image: url(../icons/question\(1\).png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 38px;
+    height: 38px;
+    display: block;
+    margin-right: 10px;
+}
+
+.req-level-four {
+    width: 90%;
+    height: auto;
+    padding-top: 10px;
+    display: block;
+    border-radius: 20px;
+    box-shadow: 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+
+.all-info {
+    width: 80%;
+    display: block;
+    margin: auto;
+}
+
+.dec-icon {
+    background-image: url(../icons/failed.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 20px;
+    height: 20px;
+    display: block;
+    margin: auto;
+}
+
+.acc-icon {
+    background-image: url(../icons/checked.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 20px;
+    height: 20px;
+    display: block;
+    margin: auto;
+}
+
+.acc-dec-btn {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.dec-btn {
+    width: 50%;
+    display: flex;
+    justify-content: right;
+    background-color: rgb(255, 172, 172);
+    border-bottom-right-radius: 20px;
+}
+
+.dec-text {
+    width: 80%;
+    text-align: center;
+}
+
+.acc-text {
+    width: 80%;
+    text-align: center;
+}
+
+.accept-btn {
+    width: 50%;
+    display: flex;
+    justify-content: right;
+    background-color: rgb(128, 255, 128);
+    border-bottom-left-radius: 20px;
+}
+
+
+/****************************** reserve ***********************/
+
+.all-pelans {
+    width: 70%;
+    display: flex;
+    justify-content: space-evenly;
+    margin: auto;
+}
+
+.pelan-btn {
+    width: 200px;
+    height: 40px;
+    display: block;
+    background-color: blue;
+    color: #fff;
+    border: 1px;
+    border-radius: 20px;
+    margin: auto;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+
+.tik-price-icon {
+    background-image: url(../icons/accept-circular-button-outline.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 30px;
+    height: 30px;
+    display: block;
+    margin: auto;
+}
+
+.all-price {
+    width: 170px;
+    display: flex;
+    background-color: rgb(255, 163, 44);
+    border-radius: 20px;
+    color: #fff;
+    height: 40px;
+    margin: auto;
+}
+
+.rating-text {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.sugg-text {
+    text-align: center;
+    font-weight: bold;
+    color: green;
+}
+
+.rate {
+    color: #FFD700;
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+.pelan-price {
+    font-size: 17px;
+    margin: auto;
+}
+
+.pelan {
+    height: 135px;
+    padding: 30px;
+    background-color: #cfcfcf;
+    border-radius: 20px;
 }
