change api derakhti

--- a/Derakhti/templates/derakhti/derakhti_page/derakhti_page.html
+++ b/Derakhti/templates/derakhti/derakhti_page/derakhti_page.html
@@ -50,11 +50,11 @@
             </div>
             <div class="panels-details">
                 <div class="comments-icon"></div>
-                <p>فروشگاه صنایع دستی</p>
+                <p><a href="{% url 'Taksathi:products_page' %}" style="color: black">فروشگاه صنایع دستی</a></p>
             </div>
             <div class="panels-details">
                 <div class="exit-icon"></div>
-                <p>خروج</p>
+                <p><a href="{% url 'Account:logout_page' %}" style="color: black" >خروج</a></p>
             </div>
         </div>
 
