--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -108,13 +108,13 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#"><i class="fa fa-user"></i>ورود</a>
+                        <a class="nav-link text-dark" href="{% url 'Account:login_page' %}"><i class="fa fa-user"></i>ورود</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#"><i class="fa fa-pen"></i>ثبت نام</a>
+                        <a class="nav-link text-dark" href=""><i class="fa fa-pen"></i>ثبت نام</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#"><i class="fa fa-shopping-cart"></i>فروشگاه</a>
+                        <a class="nav-link text-dark" href="{% url 'Taksathi:products_page' %}"><i class="fa fa-shopping-cart"></i>فروشگاه</a>
                     </li>
                 </ul>
             </div>
